--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <button class="btn btn-info">hello</button>
-    <button class="btn btn-warning">click me!</button>
-    <button class="btn btn-success">click it</button>
+    <button class="btn btn-outline-warning">click me!</button>
+    <button class="btn btn-outline-success">click it</button>
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
