--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <a class="btn btn-outline-success" href="#">google</a>
     <button class="btn btn-info">hello</button>
     <button class="btn btn-outline-warning">click me!</button>
     <button class="btn btn-outline-success">click it</button>
