--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <button class="btn btn-info">hello</button>
     <button class="btn btn-outline-warning">click me!</button>
     <button class="btn btn-outline-success">click it</button>
+    <br>
+    <h3>Messages <span class="badge text-bg-success">New</span></h3>
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
