--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <button class="btn btn-outline-success">click it</button>
     <br>
     <h3>Messages <span class="badge text-bg-success">New</span></h3>
+    <br>
+    <button class="btn btn-dark">
+        Messages
+        <span class="badge bg-success">100+</span>
+    </button>
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
