--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <br>
     <button class="btn btn-dark">
         Messages
-        <span class="badge bg-success">100+</span>
+        <span class="badge bg-success rounded-pill">100+</span>
     </button>
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
