--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         Messages
         <span class="badge bg-success rounded-pill">100+</span>
     </button>
+    <br>
+    <div class="alert alert-success">you are a Genius</div>
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
