--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     </button>
     <br>
     <div class="alert alert-success">you are a Genius</div>
+    <div class="alert alert-secondary">
+        congratulation 
+    </div>
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
