--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </button>
     <br>
     <div class="alert alert-success">you are a Genius</div>
-    <div class="alert alert-secondary">
+    <div class="alert alert-secondary alert-dismissable">
         congratulation 
     </div>
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
