--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div class="alert alert-success">you are a Genius</div>
     <div class="alert alert-secondary alert-dismissable">
         congratulation 
+        <button class="btn-close"></button>
     </div>
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
