--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <br>
     <div class="alert alert-success">you are a Genius</div>
     <div class="alert alert-secondary alert-dismissable">
-        congratulation 
-        <button class="btn-close"></button>
+        congratulation you did it.
+        <button class="btn-close"  data-bs-dismiss="alert"></button>
     </div>
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
