--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </button>
     <br>
     <div class="alert alert-success">you are a Genius</div>
-    <div class="alert alert-secondary alert-dismissable">
+    <div class="alert alert-secondary alert-dismissible">
         congratulation you did it.
         <button class="btn-close"  data-bs-dismiss="alert"></button>
     </div>
