--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-    
+    <div>
+        <button class="btn btn-outline-success">one</button>
+        <button class="btn btn-outline-info">two</button>
+        <button class="btn btn-outline-primary">three</button>
+    </div>
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
