--- a/index2.html
+++ b/index2.html
@@ -11,6 +11,13 @@
 <body>
     <div class="container">
         <h3>Bootstrap practice</h3>
+        <div class="btn-group">
+            <button class="btn btn-outline-success">one</button>
+            <button class="btn btn-outline-info">two</button>
+            <button class="btn btn-outline-primary">three</button>
+        </div>
+
+        
         <div>
             <button class="btn btn-outline-success">one</button>
             <button class="btn btn-outline-info">two</button>
