--- a/index2.html
+++ b/index2.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
+    <nav class="navbar">
+        <a href="#" class="">Brand Name</a>
+    </nav>
     <div class="container">
         <h3>Bootstrap practice</h3>
         <div class="btn-group">
