--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="#" class="">Brand Name</a>
+        <a href="#" class="navbar-brand">Brand Name</a>
     </nav>
     <div class="container">
         <h3>Bootstrap practice</h3>
