--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="#" class="navbar-brand">Brand Name</a>
+        <a href="#" class="navbar-brand">
+            <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24">
+        </a>
     </nav>
     <div class="container">
         <h3>Bootstrap practice</h3>
