--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-    <nav class="navbar">
+    <nav class="navbar bg-body-tertiary">
         <a href="#" class="navbar-brand">
             <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24">
         </a>
