--- a/index2.html
+++ b/index2.html
@@ -9,12 +9,9 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-    <nav class="navbar bg-body-tertiary">
-        <a href="#" class="navbar-brand">
-            <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24">
-        </a>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <a href="#" class="navbar-brand">Brand Name</a>
     </nav>
-    <div class="container">
         <h3>Bootstrap practice</h3>
         <div class="btn-group">
             <button class="btn btn-outline-success">one</button>
