--- a/index2.html
+++ b/index2.html
@@ -11,6 +11,11 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <a href="#" class="navbar-brand">Brand Name</a>
+        <div class="navbar-nav">
+            <a>Home</a>
+            <a>Practice</a>
+            <a>About Us</a>
+        </div>
     </nav>
         <h3>Bootstrap practice</h3>
         <div class="btn-group">
