--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <a href="#" class="navbar-brand">Brand Name</a>
         <div class="navbar-nav">
-            <a>Home</a>
+            <a class="nav-link">Home</a>
             <a>Practice</a>
             <a>About Us</a>
         </div>
