--- a/index2.html
+++ b/index2.html
@@ -12,9 +12,9 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <a href="#" class="navbar-brand">Brand Name</a>
         <div class="navbar-nav">
-            <a class="nav-link">Home</a>
-            <a>Practice</a>
-            <a>About Us</a>
+            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="#">Practice</a>
+            <a class="nav-link" href="#">About Us</a>
         </div>
     </nav>
         <h3>Bootstrap practice</h3>
