--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
             <a class="nav-link" href="#">Home</a>
             <a class="nav-link" href="#">Practice</a>
             <a class="nav-link" href="#">About Us</a>
-            <a>Contact Us</a>
+            <a class="nav-link" href="#">Contact Us</a>
         </div>
     </nav>
         <h3>Bootstrap practice</h3>
