--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,9 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <a href="#" class="navbar-brand">Brand Name</a>
-        <div class="card"></div>
+        <div class="card">
+            <img src="" class="card-img-top">
+        </div>
         <div class="navbar-nav">
             <a class="nav-link" href="#">Home</a>
             <a class="nav-link" href="#">Practice</a>
