--- a/index2.html
+++ b/index2.html
@@ -13,6 +13,10 @@
         <a href="#" class="navbar-brand">Brand Name</a>
         <div class="card">
             <img src="" class="card-img-top">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text"></p>
+            </div>
         </div>
         <div class="navbar-nav">
             <a class="nav-link" href="#">Home</a>
