--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,9 @@
             <img src="" class="card-img-top">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <p class="card-text"></p>
+                <p class="card-text">
+                    This is a basic card and made for just doing practice .
+                </p>
             </div>
         </div>
         <div class="navbar-nav">
