--- a/index2.html
+++ b/index2.html
@@ -18,6 +18,7 @@
                 <p class="card-text">
                     This is a basic card and made for just doing practice .
                 </p>
+                <a href="#" class="btn btn-outline-success">click to know more</a>
             </div>
         </div>
         <div class="navbar-nav">
