--- a/index3.html
+++ b/index3.html
@@ -9,7 +9,13 @@
     <link rel="stylesheet" href="style3.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h2>Grid System</h2>
+        <div class="row">
+            <div class="col bg-success">one</div>
+            <div class="col bg-danger">two</div>
+        </div>
+    </div>
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
