--- a/index3.html
+++ b/index3.html
@@ -11,6 +11,9 @@
 <body>
     <div class="container">
         <h2>Grid System</h2>
+        <form class="mb-3">
+
+        </form>
         <div class="row">
             <div class="col bg-success">one</div>
             <div class="col bg-danger">two</div>
