--- a/index3.html
+++ b/index3.html
@@ -12,7 +12,8 @@
     <div class="container">
         <h2>Grid System</h2>
         <form class="mb-3">
-
+            <label>Email address</label>
+            <input placeholder="Email">
         </form>
         <div class="row">
             <div class="col bg-success">one</div>
