--- a/index3.html
+++ b/index3.html
@@ -13,7 +13,7 @@
         <h2>Grid System</h2>
         <form class="mb-3">
             <label class="form-label" for="email">Email address</label>
-            <input class="form-control" placeholder="Email" id="email">
+            <input type="email" class="form-control-sm" placeholder="Email" id="email">
         </form>
         <div class="row">
             <div class="col bg-success">one</div>
