--- a/index3.html
+++ b/index3.html
@@ -19,6 +19,13 @@
             <div class="col bg-success">one</div>
             <div class="col bg-danger">two</div>
         </div>
+        <div class="mb-3">
+            <select class="form-select">
+                <option>one</option>
+                <option>two</option>
+                <option>three</option>
+            </select>
+        </div>
     </div>
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
