--- a/index3.html
+++ b/index3.html
@@ -21,9 +21,9 @@
         </div>
         <div class="mb-3">
             <select class="form-select">
-                <option>one</option>
-                <option>two</option>
-                <option>three</option>
+                <option value="1">one</option>
+                <option value="2">two</option>
+                <option value="3">three</option>
             </select>
         </div>
     </div>
