--- a/index3.html
+++ b/index3.html
@@ -21,6 +21,7 @@
         </div>
         <div class="mb-3">
             <select class="form-select">
+                <option selected>select something</option>
                 <option value="1">one</option>
                 <option value="2">two</option>
                 <option value="3">three</option>
